@@ -24,6 +24,7 @@ RELEASE NOTES
     asserta/1 and assertz/1 when asserting a clause for a new predicate.
     Simplified the updating of the internal table for dynamically defined
     predicates when using the built-in methods retract/1 and retractall/1.
+    Simplified compiler code used when creating new entities.
 
     Updated the Logtalk compiler in order to also delete the intermediate
     files generated by the back-end Prolog compilers when compiling the
